[package]
name = "testhooks"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = [ "full" ] }
proc-macro2 = "1"
proc-macro-error = "1"

[dev-dependencies]
quote = "1"
